Version 2.2.3

 User-visibile change:
  * Fix: Can't call method "filename" on unblessed reference at Exec.pm line 5x
    1. e.g. clive URL --exec="ls;"
    2. Closes Debian bug #535459


Version 2.2.2
(July 9, 2009)

 User-visible changes:
  * Change: Google: --format=mp4/best
    1. Default to flv if mp4 is not available
    2. Fix --format=best support

 Developer-visible changes:
  * Add: t/$host.t: NO_INTERNET variable support (closes issue #24)
  * Change: t/02youtube.t test link
    1. Old dropped dead
  * Remove: t/06lastfm.t
    1. t/02youtube.t: includes the same test


Version 2.2.1
(June 21, 2009)

 User-visible changes:
  * Add: support for Vimeo (closes issue #19)
  * Add: return codes for each error case (closes issue #22)
  * Fix: return code is always 0 (closes issue #20)
  * Change: --hosts output now matches cclive output

 Developer-visible changes:
  * Change: Cctv, Dailymotion, Liveleak -> use clive::Utils::matchRegExps
  * Add: t/12error.t


Version 2.2.0
(June 14, 2009)

FOREWORD
--------

This release is a major overhaul aimed to fix the previous design flaws
and clean up the codebase. Note that 2.2.0 breaks compatibility with
the earlier versions of clive.

Most users will not notice much differences after upgrading to 2.2.0
but those users who have used clive for anything more than "clive URL"
should read the changes carefully. The summary of changes section
includes more detailed changes that is recommended reading for all
users and maintainers.

2.2.0 changes the license from ISC to GPLv3. The license was last
changed in 2.1.0 to ISC but has now been reverted back to GPLv3 after
some further consideration.

Config::Tiny has been replaced with Getopt::ArgvFile. The latter had
some advantages over Config::Tiny that lead to the switch. For example,
instead of trying to memorize the (often confusing) config variable
names, users can now use command line options in the config file.
